--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,9 @@
 
 body {
   height: 2000px;
+  background-color: #f4f4f4;
+  font-family: "Yellowtail";
+  font-weight: 700;
 }
 
 /* END ---------------------------------------------------------- Global style */
@@ -50,9 +53,9 @@ ul {
 
 /* START -------------------------------------------------------- Video style */
 .training-video {
-  height: 500px;
+  height: auto;
   width: 100%;
-  position: absolute;
+  position: relative;
   top: 0;
 }
 .training-video video {
@@ -62,6 +65,23 @@ ul {
 }
 
 /* END ---------------------------------------------------------- Video style */
+
+/* START -------------------------------------------------------- Locations style */
+
+.locations {
+  color: #5b5959;
+}
+.locations h1 {
+  margin: 20px auto;
+  width: 148px;
+}
+h1 span {
+  font-size: 45px;
+  float: left;
+  line-height: 58px;
+}
+
+/* END ---------------------------------------------------------- Locations style */
 
 /* START -------------------------------------------------------- Media query */
 
@@ -94,6 +114,19 @@ ul {
   li {
     margin: 40px auto 0;
     width: 200px;
+  }
+}
+
+/* navbar responsive on large screens */
+@media only screen and (min-width: 1440px) {
+  .logo img {
+    height: 188.25px;
+    width: 337.5px;
+  }
+  .nav-link {
+    font-size: 50px;
+    padding-right: 18px !important;
+    padding-left: 18px !important;
   }
 }
 
