--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,15 +72,25 @@ ul {
   color: #5b5959;
 }
 .locations h1 {
-  margin: 20px auto;
+  margin: 30px auto;
   width: 148px;
 }
 h1 span {
-  font-size: 45px;
+  font-size: 50px;
   float: left;
   line-height: 58px;
 }
-
+.tricolor {
+  width: 100px;
+  height: 3.5px;
+  left: 17px;
+  right: 10px;
+  z-index: -1;
+  position: relative;
+  margin: 0 auto;
+  bottom: 35px;
+  display: block;
+}
 /* END ---------------------------------------------------------- Locations style */
 
 /* START -------------------------------------------------------- Media query */
@@ -107,26 +117,37 @@ h1 span {
     background-color: #333;
     height: 100vh;
   }
-  .orange-navlink-divide {
+  li a {
     border-right: none;
-    border-bottom: 2px solid orange;
+    border: 2px solid orange;
+    border-radius: 20px;
   }
   li {
     margin: 40px auto 0;
     width: 200px;
   }
+  li a:hover {
+    background-color: #d98100;
+  }
 }
 
-/* navbar responsive on large screens */
 @media only screen and (min-width: 1440px) {
+  /* navbar responsive on large screens */
   .logo img {
-    height: 188.25px;
-    width: 337.5px;
+    height: 150.6px;
+    width: 270px;
   }
   .nav-link {
-    font-size: 50px;
+    font-size: 45px;
     padding-right: 18px !important;
     padding-left: 18px !important;
+  }
+  .nav-bg-color {
+    height: 176.59px;
+  }
+  /* location responsive on large screens */
+  h1 {
+    font-size: 50px;
   }
 }
 
