--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,15 +237,21 @@ h1 span {
     margin-top: 120.13px;
   }
   .video-overlay{
-      width: 40%;
-      left:30%;
-      top:180px;
+      width: 80%;
+      left:10%;
+      top:155px;
   }
   .video-overlay h1{
-      padding: 0;
+      padding: 0 11px;
+      font-size: 9vw;
   }
   .video-overlay p{
       margin: 0;
+      font-size: 4.5vw;
+  }
+  .training-button{
+      margin-bottom: 10px;
+      font-size: 2.1vw;
   }
   
 
@@ -280,7 +286,7 @@ h1 span {
 }
 @media only screen and (max-width: 450px){
     .video-overlay{
-        top:150px;
+        top:140px;
     }
 }
 
