--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,7 @@ ul {
   font-family: "Nixie One", sans-serif;
   text-transform: uppercase;
   background-color: #d98100;
-  font-size: 1.3vw;
+  font-size: 1.7vw;
   border: none;
   border-radius: 20px;
   margin-bottom: 20px;
@@ -255,7 +255,7 @@ h1 span {
   }
   .training-button {
     margin-bottom: 10px;
-    font-size: 2.1vw;
+    font-size: 2.8vw;
   }
 
   /* location section */
@@ -323,9 +323,30 @@ h1 span {
     height: 72px;
     transform: scale(1.5);
     margin: auto;
+    margin-bottom: 30px;
   }
   .locations h1 {
     margin-top: 40px;
+  }
+}
+
+@media only screen and (min-width: 1900px) {
+  .nav-bg-color {
+    transform: scale(1.5);
+    margin-top: 45px;
+  }
+  .logo {
+    transform: scale(1.5);
+    margin-top: 50px;
+    margin-left: 90px;
+  }
+  ul {
+    transform: scale(1.5);
+    margin-right: 200px;
+    margin-top: 50px;
+  }
+  .scale {
+    transform: scale(2);
   }
 }
 
