--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,61 @@
 
 body {
   font-family: "Yellowtail", sans-serif;
+  background-color: #f4f4f4;
 }
 /* END ---------------------------------------------------------- Global style */
+
+/* START -------------------------------------------------------- Modal style */
+.modal-header {
+  border: none;
+  background-color: #333;
+  color: white;
+}
+.modal-title {
+  letter-spacing: 2px;
+  border-left: 2px solid #d98100;
+  padding-left: 10px;
+}
+.close-modal {
+  color: #d98100;
+  text-shadow: none;
+  font-size: 30px;
+}
+.modal-body {
+  background-color: #f4f4f4;
+  padding-bottom: 3px;
+}
+.modal-body p {
+  font-family: "Nixie One", sans-serif;
+  padding-left: 10px;
+  margin-top: 12px;
+  font-style: italic;
+}
+.modal hr {
+  width: 95%;
+}
+.modal-footer {
+  border: none;
+  background-color: #f4f4f4;
+}
+form {
+  font-family: "Nixie One";
+}
+input {
+  background-color: whitesmoke;
+  border: 1px solid #d98100;
+  border-radius: 5px;
+}
+#email {
+  width: 99%;
+}
+.btn {
+  background-color: #d98100;
+  color: white;
+  float: right;
+}
+
+/* END ---------------------------------------------------------- Modal style */
 
 /* START -------------------------------------------------------- Navbar style */
 
@@ -111,15 +164,6 @@ ul {
   outline: none;
 }
 
-/* training modal */
-
-.modal-title {
-  letter-spacing: 2px;
-}
-.modal-body {
-  font-family: "Nixie One", sans-serif;
-}
-
 /* END ---------------------------------------------------------- Video style */
 
 /* START -------------------------------------------------------- About style */
@@ -222,6 +266,18 @@ h1 span {
 
 /* END ---------------------------------------------------------- Locations style */
 
+/* START -------------------------------------------------------- Testimonials style */
+
+.testimonials-headline {
+  width: 178px !important;
+}
+.testimonials-tricolor {
+  left: 11px !important;
+  width: 152px !important;
+}
+
+/* END ---------------------------------------------------------- Testimonials style */
+
 /* START -------------------------------------------------------- Media query */
 
 /* Mobile responsiveness */
@@ -229,6 +285,15 @@ h1 span {
 @media only screen and (max-width: 450px) {
   .video-overlay {
     top: 140px;
+  }
+}
+
+@media only screen and (max-width: 575px) {
+  /* modal form */
+
+  #fname,
+  #lname {
+    width: 99%;
   }
 }
 
@@ -324,7 +389,7 @@ h1 span {
 
 @media only screen and (min-width: 900px) {
   .modal {
-    transform: scale(1.5);
+    transform: scale(1.3);
   }
 }
 
@@ -371,7 +436,7 @@ h1 span {
   /* modal */
 
   .modal {
-    transform: scale(2);
+    transform: scale(1.5);
   }
 }
 
