--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ body {
 /* END ---------------------------------------------------------- Global style */
 
 /* START -------------------------------------------------------- Modal style */
+
 .modal-header {
   border: none;
   background-color: #333;
@@ -42,13 +43,18 @@ body {
   background-color: #f4f4f4;
 }
 form {
-  font-family: "Nixie One";
+  font-family: "Nixie One", sans-serif;
 }
 input {
   background-color: whitesmoke;
   border: 1px solid #d98100;
   border-radius: 5px;
+  margin-bottom: 8px;
 }
+input:focus {
+  outline: none;
+}
+
 #email {
   width: 99%;
 }
@@ -168,12 +174,34 @@ ul {
 
 /* START -------------------------------------------------------- About style */
 
+/* headline */
 .about-headline {
   width: 127px !important;
 }
 .about-tricolor {
   left: 12px !important;
   width: 90px !important;
+}
+
+/* about us container */
+.about-container {
+  font-family: "Nixie One", sans-serif;
+  width: 90%;
+}
+.about-container p {
+  margin-bottom: 40px;
+  letter-spacing: 1px;
+  font-style: italic;
+}
+.icon-column {
+  text-align: center;
+}
+.icon {
+  width: 80px;
+}
+.about-container figcaption {
+  font-weight: 600;
+  margin-bottom: 15px;
 }
 
 /* END ---------------------------------------------------------- About style */
@@ -387,9 +415,9 @@ h1 span {
 
 /* tablet responsiveness */
 
-@media only screen and (min-width: 900px) {
+@media only screen and (min-width: 1100px) {
   .modal {
-    transform: scale(1.3);
+    transform: scale(1.2);
   }
 }
 
@@ -438,6 +466,14 @@ h1 span {
   .modal {
     transform: scale(1.5);
   }
+
+  /* about */
+  .about-container p {
+    font-size: 1.2vw;
+  }
+  .about-container figcaption {
+    font-size: 1.1vw;
+  }
 }
 
 @media only screen and (min-width: 1900px) {
@@ -467,6 +503,11 @@ h1 span {
 
   .modal {
     transform: scale(2.5);
+  }
+
+  /* about */
+  .about-container img {
+    width: 150px;
   }
 }
 
