--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 /* START -------------------------------------------------------- Global style */
 
 @import url("https://fonts.googleapis.com/css2?family=Nixie+One&family=Yellowtail&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 body {
   font-family: "Yellowtail", sans-serif;
@@ -176,11 +177,11 @@ ul {
 
 /* headline */
 .about-headline {
-  width: 127px !important;
+  width: 3.05em;
 }
 .about-tricolor {
-  left: 12px !important;
-  width: 90px !important;
+  width: 2.3em;
+  bottom: 6px;
 }
 
 /* about us container */
@@ -208,26 +209,29 @@ ul {
 
 /* START -------------------------------------------------------- Locations style */
 
-/* location heading */
+/* location headline */
 
+.locations-headline {
+  width: 3.6em;
+}
 .scale h1 {
   margin: 35px auto;
-  width: 148px;
   color: #5b5959;
 }
 h1 span {
-  font-size: 50px;
+  font-size: 1.2em;
   float: left;
-  line-height: 58px;
+  line-height: 1.2em;
+}
+.locations-tricolor {
+  left: 2px;
+  width: 2.5em;
+  bottom: 7px;
 }
 .tricolor {
-  width: 100px;
   height: 3.5px;
-  left: 17px;
-
   position: relative;
   margin: 0 auto;
-  bottom: 40px;
   display: block;
 }
 /* location backgrounds */
@@ -297,14 +301,46 @@ h1 span {
 /* START -------------------------------------------------------- Testimonials style */
 
 .testimonials-headline {
-  width: 178px !important;
+  width: 4.4em;
 }
 .testimonials-tricolor {
-  left: 11px !important;
-  width: 152px !important;
+  right: 2px;
+  width: 3.7em;
+  bottom: 6px;
 }
 
 /* END ---------------------------------------------------------- Testimonials style */
+
+/* START -------------------------------------------------------- Footer style */
+
+.group {
+  text-align: center;
+}
+.social-media {
+  background-color: #333;
+  height: auto;
+  color: white;
+}
+.social-media h1 {
+  font-size: 1.6vw;
+  display: inline-block;
+}
+.social-media i {
+  color: white;
+  font-size: 3vw;
+  padding: 20px 10px;
+}
+.copyright {
+  background-color: #d98100;
+  color: white;
+  text-align: right;
+}
+.copyright p {
+  margin: 0 20px;
+  font-family: "Nixie One", sans-serif;
+}
+
+/* END ---------------------------------------------------------- Footer style */
 
 /* START -------------------------------------------------------- Media query */
 
@@ -455,7 +491,7 @@ h1 span {
     height: 72px;
     transform: scale(1.5);
     margin: auto;
-    margin-bottom: 30px;
+    margin-bottom: 65px;
   }
   .scale h1 {
     margin-top: 40px;
@@ -468,6 +504,9 @@ h1 span {
   }
 
   /* about */
+  .about-container {
+    width: 65%;
+  }
   .about-container p {
     font-size: 1.2vw;
   }
@@ -493,7 +532,7 @@ h1 span {
     margin-top: 50px;
   }
 
-  /* location heading */
+  /* location headline */
 
   .scale {
     transform: scale(2);
