--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,8 +56,8 @@ input:focus {
   outline: none;
 }
 
-#email {
-  width: 99%;
+input {
+  width: inherit;
 }
 .btn {
   background-color: #d98100;
@@ -307,6 +307,47 @@ h1 span {
   right: 2px;
   width: 3.7em;
   bottom: 6px;
+}
+
+.testimonials-container {
+  margin-bottom: 100px;
+}
+.circle {
+  position: relative;
+  top: 30px;
+  margin: 0 auto;
+  width: 200px;
+  height: 200px;
+}
+.circle img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+}
+.customer1 {
+  border: 4px solid #4b85a8;
+}
+.customer2 {
+  border: 4px solid #d98100;
+}
+.customer3 {
+  border: 4px solid #e1b200;
+}
+.text {
+  border: 1px solid #333;
+  border-radius: 20px;
+  width: 300px;
+  margin: 0 auto;
+  background-color: white;
+}
+.text h1 {
+  margin-top: 45px;
+  margin-bottom: 10px;
+  text-align: center;
+  color: #5b5959;
+}
+.text p {
+  font-family: "Nixie One", sans-serif;
 }
 
 /* END ---------------------------------------------------------- Testimonials style */
