--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -377,6 +377,41 @@ h1 span {
     width: 1.5em;
     bottom: 6px;
 }
+.gallery-container{
+    width: 90%;
+    margin: 0 auto;
+}
+.gallery-container img{
+    object-fit: cover;
+}
+.img1{
+    height: 100%;
+    width: 98%;
+}
+.img2{
+    height: 49.5%;
+    width: 98%;
+}
+.img3{
+    height: 49.5%;
+    width: 98%;
+    margin-top: 1.7%;
+}
+.img4{
+    height: 49.5%;
+    width: 48.5%;
+}
+.img5{
+    height: 49.5%;
+    width: 48.5%;
+    float: right;
+    margin-right: 2%;
+}
+.img6{
+    height: 49.5%;
+    width:98%;
+    margin-top: 1.7%;
+}
 
 
 
@@ -525,6 +560,12 @@ h1 span {
     display: initial;
     width: 100%;
   }
+
+  /* gallery */
+
+  .mobile-gap{
+      margin:1.7% 0;
+  }
   /* footer */
   .social-media h1{
       font-size: 1.5em;
@@ -534,7 +575,23 @@ h1 span {
   }
 }
 
-/* tablet responsiveness */
+@media only screen and (max-width: 1199px) {
+
+.img4, .img5{
+ width: 49%;
+    margin-top: 1%;
+
+}
+.img5{
+    margin-right: 1%;
+}
+.img6{
+    width: 99%;
+    margin-top: 1%;
+}
+
+}
+
 
 @media only screen and (min-width: 1100px) {
   .modal {
@@ -610,6 +667,8 @@ h1 span {
   .copyright p{
    font-size: 1.5vw;
   }
+
+  
 
 
 
