--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -384,33 +384,34 @@ h1 span {
 .gallery-container img{
     object-fit: cover;
 }
+
+
+.img1:hover{
+    transform: scale(1.2);
+}
 .img1{
     height: 100%;
-    width: 98%;
+    width: 100%;
 }
-.img2{
-    height: 49.5%;
-    width: 98%;
+
+.img1, .img2, .img3, .img4{
+    padding-right: 10px;
 }
-.img3{
-    height: 49.5%;
-    width: 98%;
-    margin-top: 1.7%;
+.img3, .img6{
+    padding-top: 10px;
 }
-.img4{
-    height: 49.5%;
-    width: 48.5%;
+.img2 , .img3, .img6{
+    height: 50%;
+    width: 100%;
+}
+
+.img4, .img5{
+    height: 50%;
+    width: 50%;
 }
 .img5{
-    height: 49.5%;
-    width: 48.5%;
     float: right;
-    margin-right: 2%;
-}
-.img6{
-    height: 49.5%;
-    width:98%;
-    margin-top: 1.7%;
+    
 }
 
 
@@ -560,12 +561,14 @@ h1 span {
     display: initial;
     width: 100%;
   }
-
   /* gallery */
-
-  .mobile-gap{
-      margin:1.7% 0;
+  .img1, .img2, .img3{
+      padding-right: 0px;
   }
+    .img1, .img3{
+        padding-bottom: 10px;
+    }
+
   /* footer */
   .social-media h1{
       font-size: 1.5em;
@@ -577,19 +580,12 @@ h1 span {
 
 @media only screen and (max-width: 1199px) {
 
-.img4, .img5{
- width: 49%;
-    margin-top: 1%;
-
+.img2, .img3{
+    padding-right: 0;
 }
-.img5{
-    margin-right: 1%;
+.img1, .img3{
+    padding-bottom: 10px;
 }
-.img6{
-    width: 99%;
-    margin-top: 1%;
-}
-
 }
 
 
@@ -601,6 +597,10 @@ h1 span {
   /* about section */
   .about-container p {
     margin-right: 3em;
+  }
+  /* gallery */
+  .gallery-container{
+      width: 75%;
   }
 }
 
